# revenue-manager-agent

./: .env.example  .gitignore  ARCHITECTURE.md  ATTESTATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: build.py  prompt.py  subagents.py
app/: server.py
app/static/: index.html
etl/: __init__.py  load.py  run_etl.py  scrape.py  transform.py
skills/cancellation-risk/: SKILL.md
sql/: schema_overrides.sql
tests/: conftest.py  fixture_data.py  test_agent.py  test_etl.py  test_skills.py  test_tools.py
tests/fixtures/: composite_trace.json
tools/: METRIC_DEFINITIONS.md  metrics.py
