[project]
name = "otel-revenue-agent"
version = "0.1.0"
description = "Revenue Manager Agent for a hotel GM — Otel AI build challenge solution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.2",
    "langchain-anthropic>=0.3",
    "psycopg[binary]>=3.2",
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: tests that require a loaded Postgres database",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# The brief lives in-tree as read-only reference; never lint or format it.
# compute_load_fingerprint.py is vendored verbatim from the brief — keep it
# byte-identical (it is the official proof script), so exclude it from lint too.
extend-exclude = ["otel-build-challenge", "scripts/compute_load_fingerprint.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI dependency injection idiomatically calls Depends() in argument defaults.
"app/server.py" = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etl", "tools", "agent", "app"]
